# etceteras

./: README.md  meson.build
include/etceteras/: expected.hpp  pyramid.hpp
test/: expected.test.hpp  meson.build  pyramid.test.hpp  test.cpp
